<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    tools:context=".view_user">
    <TextView
        android:id="@+id/page_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Username"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="#232F34"
        android:layout_marginBottom="10dp"
        android:textSize="30sp"/>
    <View style="@style/Divider"/>
    <TextView
        android:textColor="#4a6572"
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Individual Time Limit Options"
        android:textSize="20sp"
        android:gravity="center_horizontal"/>
    <View style="@style/Divider"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/time_1"
            android:hint="Start Time"
            android:gravity="center_horizontal"
            android:paddingVertical="10dp"
            android:textSize="22sp"
            android:background="#60D3D3D3"
            android:layout_weight="1"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/time_2"
            android:hint="End Time"
            android:gravity="center_horizontal"
            android:paddingVertical="10dp"
            android:textSize="22sp"
            android:background="#60D3D3D3"
            android:layout_weight="1"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <Button
            android:layout_marginHorizontal="5dp"
            android:id="@+id/set_time_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="set time limit"
            android:backgroundTint="#344955"
            android:layout_weight="1"/>
        <Button

            android:id="@+id/remove_tl_btn"
            android:layout_marginHorizontal="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Remove limit"
            android:backgroundTint="#BC3131"
            android:layout_weight="1"/>
    </LinearLayout>
    <View style="@style/Divider"/>
    <TextView
        android:textColor="#4a6572"
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Individual Blacklisting Options"
        android:textSize="20sp"
        android:gravity="center_horizontal"/>
    <View style="@style/Divider"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <EditText
            android:id="@+id/typed_website"
            android:layout_width="wrap_content"
            android:maxWidth="250dp"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:hint="Type Website Here to Add"
            android:background="#60D3D3D3"
            android:singleLine="true"
            android:paddingHorizontal="10dp"
            android:layout_weight="3"/>
        <Button
            android:layout_marginHorizontal="10dp"
            android:id="@+id/add_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#344955"
            android:text="ADD" />

    </LinearLayout>
    <ListView
        android:id="@+id/whitelist_sites"
        android:layout_width="match_parent"
        android:layout_height="10000dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:background="#40D3D3D3">

    </ListView>

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:maxWidth="250dp"
            android:id="@+id/selected"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:hint="click a website to remove"
            android:singleLine="true"
            android:textSize="20sp"
            android:paddingHorizontal="10dp"
            android:layout_marginHorizontal="5dp"
            android:background="#60D3D3D3"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/remove_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#BC3131"
            android:text="remove"
            android:layout_weight="2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/ib_on_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="blacklist On"
            android:backgroundTint="#344955"
            android:layout_marginHorizontal="5dp"/>
        <Button
            android:id="@+id/ib_off_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="blacklist Off"
            android:backgroundTint="#344955"
            android:layout_marginHorizontal="5dp"/>
    </LinearLayout>
</LinearLayout>