<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    tools:context=".connected_devices">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Users"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="#232F34"
        android:layout_marginBottom="10dp"
        android:textSize="30sp"/>
    <View style="@style/Divider"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Select a user to change settings"
        android:textSize="20sp"
        android:gravity="center_horizontal"/>
    <ListView
        android:id="@+id/connected"
        android:layout_width="match_parent"
        android:layout_height="10000dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:background="#40D3D3D3">
    </ListView>
    <View style="@style/Divider"/>
    <EditText
        android:layout_gravity="center_horizontal"
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:drawableStart="@drawable/baseline_person_outline_24"
        android:drawablePadding="10dp"
        android:hint="New Username"
        android:paddingVertical="20dp"
        android:singleLine="true"
        android:background="#60D3D3D3"
        android:paddingHorizontal="60dp"/>
    <EditText
        android:layout_gravity="center_horizontal"
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="10dp"
        android:hint="New Password"
        android:inputType="textPassword"
        android:paddingVertical="20dp"
        android:background="#60D3D3D3"
        android:paddingHorizontal="60dp"/>
    <Button
        android:id="@+id/create_user_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create User"
        android:backgroundTint="#344955"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"/>
</LinearLayout>